chore: fix for toasts hidden under navbar; update django dependency to 4.10

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -1125,8 +1125,8 @@ input:checked + .toggle-bg {
   margin-top: 1rem;
 }
 
-.mb-24 {
-  margin-bottom: 6rem;
+.mb-96 {
+  margin-bottom: 24rem;
 }
 
 .ml-3 {
@@ -1143,14 +1143,6 @@ input:checked + .toggle-bg {
 
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-
-.-mt-16 {
-  margin-top: -4rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .mb-32 {
@@ -1171,6 +1163,22 @@ input:checked + .toggle-bg {
 
 .mt-24 {
   margin-top: 6rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.-mb-8 {
+  margin-bottom: -2rem;
 }
 
 .block {
@@ -1279,6 +1287,10 @@ input:checked + .toggle-bg {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.max-w-4xl {
+  max-width: 56rem;
 }
 
 .flex-1 {
@@ -1701,12 +1713,16 @@ input:checked + .toggle-bg {
   padding-left: 0.75rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .text-center {
